--- a/styles.css
+++ b/styles.css
@@ -7,20 +7,56 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: 'Rock Salt', cursive;
+}
+
+.calculator-main-container {
+    position: relative;
+    width: 50%;
+}
+
+.calculator-main-container::before {
+    display: block;
+    content: "";
+    width: 100%;
+    padding-top: calc((6 / 4) * 100%);
+}
+
+.calculator-main-container .calculator-container {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 .calculator-container {
-    width: 540px;
-    height: 900px;
+    padding: 20px;
     background-color: #feecea;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+}
+
+.button-main-container {
+    position: relative;
+}
+
+.button-main-container::before {
+    display: block;
+    content: "";
+    width: 100%;
+    padding-top: calc((5 / 4) * 100%);
+}
+
+.button-main-container .button-container {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 .button-container {
-    width: 400px;
-    height: 500px;
     border: 5px solid white;
     position: relative;
 }
@@ -37,6 +73,16 @@ body {
     width: 28%;
     right: 1;
     bottom: -1px;
+    z-index: 5;
+}
+
+.cat.equals .icon {
+    color: #ffe1ce;
+    position: absolute;
+    margin: 0;
+    right: 41%;
+    bottom: 39%;
+    font-size: 1.5em;
 }
 
 .cat.plus {
@@ -45,6 +91,7 @@ body {
     width: 28%;
     right: -7px;
     bottom: 58%;
+    z-index: 3;
 }
 
 .cat.minus {
@@ -53,6 +100,7 @@ body {
     width: 28%;
     right: -3px;
     bottom: 78%;
+    z-index: 3;
 }
 
 .cat.multiply {
@@ -61,6 +109,7 @@ body {
     width: 32%;
     right: 18%;
     bottom: 77%;
+    z-index: 2;
 }
 
 .cat.divide {
@@ -69,6 +118,7 @@ body {
     width: 30%;
     right: 47%;
     bottom: 77%;
+    z-index: 3;
 }
 
 .cat.clear {
@@ -101,6 +151,7 @@ body {
     width: 30%;
     right: 70%;
     bottom: 58%;
+    z-index: 1;
 }
 
 .cat.six {
@@ -109,6 +160,7 @@ body {
     width: 29%;
     right: 24%;
     bottom: 38%;
+    z-index: 2;
 }
 
 .cat.five {
@@ -117,6 +169,7 @@ body {
     width: 45%;
     right: 31%;
     bottom: 39%;
+    z-index: 2;
 }
 
 .cat.four {
@@ -125,14 +178,16 @@ body {
     width: 27%;
     right: 72%;
     bottom: 40%;
+    z-index: 3;
 }
 
 .cat.three {
     background-image: url("./Images/3.png");
-    height: 21%;
+    height: 23%;
     width: 29%;
     right: 24%;
-    bottom: 20%;
+    bottom: 19%;
+    z-index: 2;
 }
 
 .cat.two {
@@ -141,7 +196,7 @@ body {
     width: 25%;
     right: 50%;
     bottom: 19%;
-    z-index: 1;
+    z-index: 4;
 }
 
 .cat.one {
@@ -150,6 +205,7 @@ body {
     width: 26%;
     right: 73%;
     bottom: 19%;
+    z-index: 2;
 }
 
 .cat.decimal {
@@ -166,4 +222,5 @@ body {
     width: 53%;
     right: 49%;
     bottom: 0;
+    z-index: 1;
 }
